src/kaggle_Microsoft_malware_full/nohup.out
mkdir: cannot create directory ‘gram’: File exists
Gathering 4 grams, Class 1 out of 9...
Gathering 4 grams, Class 2 out of 9...
Gathering 4 grams, Class 3 out of 9...
Gathering 4 grams, Class 4 out of 9...
Gathering 4 grams, Class 5 out of 9...
Gathering 4 grams, Class 6 out of 9...
Gathering 4 grams, Class 7 out of 9...
Gathering 4 grams, Class 8 out of 9...
Gathering 4 grams, Class 9 out of 9...
Traceback (most recent call last):
  File "join_grams.py", line 119, in <module>
    p, n = num_instances('trainLabels.csv', i)
  File "join_grams.py", line 32, in num_instances
    for row in DictReader(open(path)):
FileNotFoundError: [Errno 2] No such file or directory: 'trainLabels.csv'
DONE bytes count!
DONE instruction count!
Traceback (most recent call last):
  File "dll.py", line 129, in <module>
    p, n = num_instances(os.path.join(p.DATASET_PATH, 'trainLabels.csv'), i)
AttributeError: 'int' object has no attribute 'DATASET_PATH'
DONE instruction count!
Traceback (most recent call last):
  File "dll.py", line 135, in <module>
    wr.writerow(row)
TypeError: a bytes-like object is required, not 'str'
Traceback (most recent call last):
  File "dll.py", line 126, in <module>
    dict_all = reduce_dict()
  File "dll.py", line 42, in reduce_dict
    dll = dll_single_file(f_name)
  File "dll.py", line 25, in dll_single_file
    for line in outfile:
KeyboardInterrupt
Traceback (most recent call last):
  File "get_id.py", line 17, in <module>
    pickle.dump(xid, open('xid_train.p', 'w'))
TypeError: write() argument must be str, not bytes
Traceback (most recent call last):
  File "dll.py", line 135, in <module>
    wr.writerow(row)
TypeError: a bytes-like object is required, not 'str'
  File "semi_model.py", line 120
    columns=['Id'] + ['mine_' + str(x) for x in range(mine_train.shape[1])]).convert_objects(convert_numeric=True)
    ^
IndentationError: unexpected indent
